--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -13,7 +13,7 @@
         <div class="col-sm-10">
              <h1 class="">{{current_user.first_name}} {{current_user.last_name}}</h1>
 
-          <button type="button" class="btn btn-success">Follow</button>  <button type="button" class="btn btn-info">Send me a message</button>
+          <a href="{% url 'profile_edit' pk=user.id %}"><button type="button" class="btn btn-success">Edit</button></a>  <button type="button" class="btn btn-info">Send me a message</button>
 <br>
         </div>
       <div class="col-sm-2"><a href="/users" class="pull-right"><img title="profile image" class="img-circle img-responsive" src="{{current_user.profile.photo.url}}"></a>
@@ -32,23 +32,6 @@
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Email</strong></span>{{current_user.email}}</li>
             </ul>
 
-
-            <ul class="list-group">
-                <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i>
-
-                </li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Shares</strong></span> 125</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Likes</strong></span> 13</li>
-                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Posts</strong></span> 37</li>
-                        <li class="list-group-item text-right"><span class="pull-left"><strong class="">Followers</strong></span> 78</li>
-            </ul>
-            <div class="panel panel-default">
-                <div class="panel-heading">Social Media</div>
-                <div class="panel-body">	<i class="fa fa-facebook fa-2x"></i>  <i class="fa fa-github fa-2x"></i>
-                    <i class="fa fa-twitter fa-2x"></i> <i class="fa fa-pinterest fa-2x"></i>  <i class="fa fa-google-plus fa-2x"></i>
-
-                </div>
-            </div>
         </div>
         <!--/col-3-->
         <div class="col-sm-9" style="" contenteditable="false">
