--- a/ordinem/templates/ordinem/ngo_list.html
+++ b/ordinem/templates/ordinem/ngo_list.html
@@ -1,10 +1,49 @@
 {% extends 'accounts/base.html' %}
 {% load static %}
+{% block aordinem %}active{% endblock %}
 {% block stylesheet %}
+    <link rel="stylesheet" href='{% static "css/bootstrap.min.css"%}'>
+    <link href="{% static 'css/poststyle.css' %} }" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" href='{% static "../../../maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"%}'>
+    <link rel="stylesheet" href='{% static "style/stylesheet.css"%}'>
      <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
      <link href="{% static 'css/ngoliststyle.css' %}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 {% block body %}
+<div id="content-block">
+		<div class="container be-detail-container">
+			<div class="row">
+				<div class="col-xs-12 col-md-4 left-feild">
+					<div class="be-user-block style-3">
+						<div class="be-user-detail">
+							<a feed-id="{{ feed.pk }}" csrf="{{ csrf_token }}" class="be-ava-user style-2 feed-container" href="#">
+								<img src="{{ user.profile.photo.url }}" class="user" alt="abc">
+							</a>
+							<h1 class="be-use-name">{{user.first_name}} {{user.last_name}}</h1>
+							<div class="be-user-info">
+								{{user.profile.birth_date}}
+							</div>
+
+							<a class="be-user-site" href="http://www.phoenix.cool/"><i class="fa fa-link"></i> www.phoenix.cool</a>
+						</div>
+					</div>
+					<div class="be-desc-block">
+						<div class="be-desc-author">
+							<div class="be-desc-label">About Me</div>
+							<div class="clearfix"></div>
+							<div class="be-desc-text">
+                                {{current_user.profile.bio}}
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-8">
+                    <div class="tab-wrapper style-1">
+
+                        <div class="tabs-content clearfix">
+                            <div class="tab-info active">
+								<div class="row">
+<!-- end profile view -->
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-md-8 col-sm-9 col-xs-12">
@@ -32,9 +71,24 @@
 		        </div>
 		    </article>
             {% endfor %}
+        <!-- Pager -->
+                <div class="pagination">
+                    <span class="step-links">
+                        {% if ngo_list.has_previous %}
+                            <a href="?page={{ ngo_list.previous_page_number }}">previous</a>
+                        {% endif %}
 
+                    <span class="current">
+                        Page {{ ngo_list.number }} of {{ ngo_list.paginator.num_pages }}.
+                     </span>
+
+                    {% if ngo_list.has_next %}
+                        <a href="?page={{ ngo_list.next_page_number }}">next</a>
+                    {% endif %}
+                    </span>
+                </div>
 
 		</div>
 	</div>
-</div>
+</div></div></div></div></div></div></div></div></div>
 {% endblock %}
