--- a/blog/templates/blog/articleslist.html
+++ b/blog/templates/blog/articleslist.html
@@ -1,11 +1,47 @@
 {% extends 'accounts/base.html' %}
 {% load static %}
+{% block ablog %}active{% endblock %}
 {% block stylesheet %}
+    <link rel="stylesheet" href='{% static "css/bootstrap.min.css"%}'>
+    <link href="{% static 'css/poststyle.css' %} }" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" href='{% static "../../../maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"%}'>
+    <link rel="stylesheet" href='{% static "style/stylesheet.css"%}'>
     <link href="{% static 'css/blog-home.css' %}" rel="stylesheet">
 {% endblock %}
-{% block ablog %}active{% endblock %}
 {% block body %}
-    <div class="container">
+    <div id="content-block">
+		<div class="container be-detail-container">
+			<div class="row">
+				<div class="col-xs-12 col-md-4 left-feild">
+					<div class="be-user-block style-3">
+						<div class="be-user-detail">
+							<a feed-id="{{ feed.pk }}" csrf="{{ csrf_token }}" class="be-ava-user style-2 feed-container" href="#">
+								<img src="{{ user.profile.photo.url }}" class="user" alt="abc">
+							</a>
+							<h1 class="be-use-name">{{user.first_name}} {{user.last_name}}</h1>
+							<div class="be-user-info">
+								{{user.profile.birth_date}}
+							</div>
+
+							<a class="be-user-site" href="http://www.phoenix.cool/"><i class="fa fa-link"></i> www.phoenix.cool</a>
+						</div>
+					</div>
+					<div class="be-desc-block">
+						<div class="be-desc-author">
+							<div class="be-desc-label">About Me</div>
+							<div class="clearfix"></div>
+							<div class="be-desc-text">
+                                {{current_user.profile.bio}}
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-8">
+                    <div class="tab-wrapper style-1">
+
+                        <div class="tabs-content clearfix">
+                            <div class="tab-info active">
+								<div class="row">
 
         <div class="row">
 
@@ -13,8 +49,7 @@
             <div class="col-md-8">
 
                 <h1 class="page-header">
-                    Page Heading
-                    <small>Secondary Text</small>
+                    Blogs
                 </h1>
 
                 <!-- Blog Post -->
@@ -27,7 +62,8 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> {{ article.timestamp }}</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                <img class="img-responsive" src="{% if article.pic_med %}{{ article.pic_med.url }}
+                {% else %}http://placehold.it/900x300{% endif %}" alt="">
                 <hr>
                 <p>{{ article.content|truncatewords:"30"}}</p>
                 <a class="btn btn-primary" href="{% url 'article_detail' pk=article.id%}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -53,66 +89,6 @@
 
                 <hr>
             </div>
-
-            <!-- Blog Sidebar Widgets Column -->
-            <div class="col-md-4">
-
-                <!-- Blog Search Well -->
-                <div class="well">
-                    <h4>Blog Search</h4>
-                    <div class="input-group">
-                        <input type="text" class="form-control">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                        </span>
-                    </div>
-                    <!-- /.input-group -->
-                </div>
-
-                <!-- Blog Categories Well -->
-                <div class="well">
-                    <h4>Blog Categories</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.col-lg-6 -->
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.col-lg-6 -->
-                    </div>
-                    <!-- /.row -->
-                </div>
-
-                <!-- Side Widget Well -->
-                <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-                </div>
-
-            </div>
-
         </div>
-    </div>
+    </div></div></div></div></div></div></div></div></div></div>
 {% endblock %}
