--- a/ordinem/templates/ordinem/detail2.html
+++ b/ordinem/templates/ordinem/detail2.html
@@ -1,106 +1,137 @@
 {% extends 'accounts/base.html' %}
 {% load static %}
 {% block stylesheet %}
-     <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'css/poststyle.css' %}" type="text/css" rel="stylesheet"/>
+    <link href="{% static 'css/detail2.css' %}" type="text/css" rel="stylesheet"/>
 {% endblock %}
+
 {% block body %}
-    <div class="container">
-<h2>{{ ngo.name }} <small>{{ ngo.get_round_ratings }}</small></h2>
-<h3>This Organization is Moderated by <a href="{% url 'profile_detail' pk=ngo.moderator.pk %}">@{{ ngo.moderator.username }}</a></h3>
-    <a href="{% url 'follow_ngo' npk=ngo.pk upk=request.user.id %}" type="submit" class="btn btn-primary">
-        {% if is_following %}Following{% else %}Follow{% endif %}
-        </a>
-    <a href="{% url 'gallery' pk=ngo.pk %}" type="submit" class="btn btn-info">Gallery</a>
-    <a href="{% url 'ngo_like' pk=ngo.pk %}" type="submit" class="btn btn-info">
-        {% if is_liked %}Unlike{% else %}like{% endif %}
-    <span class="badge">{{ ngo.likes.count }}</span>
-    </a>
-    <a href="{% url 'ngo_rate' pk=ngo.pk %}" type="submit" class="btn btn-warning">Give Ratings</a>
-{% if request.user.id == ngo.moderator.id %}
-    <a href="{% url 'post_happening' pk=ngo.id %}" type="submit" class="btn btn-success">Post Happening</a>
-    <a href="{% url 'post_gallery' pk=ngo.id %}" type="submit" class="btn btn-success">Post Pictures</a>
-{% endif %}
-    <hr/>
-{% for happening in happenings %}
-    <div class="container">
-    <div class="col-md-5">
-        <div class="panel panel-default">
-            <div class="panel-body">
-               <section class="post-heading">
-                    <div class="row">
-                        <div class="col-md-11">
-                            <div class="media">
-                              <div class="media-left">
-                                <a href="#">
-                                  <img class="media-object photo-profile" src="{{ ngo.logo.url }}" width="40" height="40" alt="...">
-                                </a>
-                              </div>
-                              <div class="media-body">
-                                <a href="#" class="anchor-username"><h4 class="media-heading">{{ ngo.name }}</h4></a>
-                                <a href="#" class="anchor-time">{{ happening.creation_date|timesince }}</a>
-                              </div>
-                            </div>
-                        </div>
-                         <div class="col-md-1">
-                             <div class="dropdown">
-                             <a href="#" class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="glyphicon glyphicon-chevron-down"></i></a>
-                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="{% url 'edit_happening' pk=happening.id %}">
-                                    <span class="glyphicon glyphicon glyphicon-edit"></span> Edit Post</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="{% url 'delete_happening' pk=happening.id %}">
-                                    <span class="glyphicon glyphicon glyphicon-trash"></span> Delete Post</a></li>
-                              </ul>
+<!-- nav bar -->
+<br>
+<br>
+<br>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container">
+<div class="row">
+    <div class="col-sm-3">
+        <a href="mail-compose.html" class="btn btn-danger btn-block btn-compose-email">Send Email</a>
+        <ul class="nav nav-pills nav-stacked nav-email shadow mb-20">
+            <li class="active" >
+                <a href="{% url 'ngo_profile' pk=ngo.pk %}">
+                    <i class="fa fa-inbox"></i> Ngo Info <span class="label pull-right"></span>
+                </a>
+            </li>
+            <li class="profile" >
+                <a href="{% url 'ngo_feeds' pk=ngo.pk %}"> <i class="fa fa-inbox"></i> Ngo Feeds <span class="label pull-right"></span></a>
+            </li>
+            <li class="profile">
+                <a href="#"><i class="fa fa-certificate"></i> Blogs by Ngo </a>
+            </li>
+            <li class="profile" >
+                <a href="{% url 'gallery' pk=ngo.pk %}">
+                    <i class="fa fa-file-text-o"></i> Gallery <span class="label label-info pull-right inbox-notification"></span>
+                </a>
+            </li>
+        </ul>
+
+        <!-- ngo user -->
+        {% if request.user.id == ngo.moderator.id %}
+        <h5 class="nav-email-subtitle">POST</h5>
+        <ul class="nav nav-pills nav-stacked nav-email shadow mb-20">
+            <li class="profile" >
+                <a href="{% url 'post_happening' pk=ngo.id %}">
+                    <i class="fa fa-inbox"></i> Post Happening <span class="label pull-right"></span>
+                </a>
+            </li>
+            <li class="profile" >
+                <a href="{% url 'post_gallery' pk=ngo.id %}" ><i class="fa fa-inbox"></i> Post Pictures <span class="label pull-right"></span></a>
+            </li>
+             <li class="profile" >
+                <a href="{% url 'post_happening' pk=ngo.id %}">
+                    <i class="fa fa-inbox"></i> Edit <span class="label pull-right"></span>
+                </a>
+            </li>
+        </ul>
+
+        {% endif %}
+    </div>
+
+    <div class="col-sm-9">
+
+        <!-- resumt -->
+        <div class="panel panel-default" class="ngoprofile" id="ngo-thing">
+               <div class="panel-heading resume-heading">
+                  <div class="row">
+                     <div class="col-lg-12">
+                        <div class="col-xs-12 col-sm-4">
+                           <figure>
+                              <img class="img-circle img-responsive" alt="" src="{{ ngo.logo.url }}">
+                           </figure>
+                            <br>
+                            <ul>
+                                <li>
+                                    <a href="{% url 'follow_ngo' npk=ngo.pk upk=request.user.id %}" type="submit" class="btn btn-primary">
+                                    {% if is_following %}Following{% else %}Follow{% endif %}<br></a>
+
+                                </li>
+                                <br>
+                                <li><a href="{% url 'ngo_like' pk=ngo.pk %}" type="submit" class="btn btn-info">
+                                {% if is_liked %}Unlike{% else %}like{% endif %}
+                                    <span class="badge">{{ ngo.likes.count }}</span></a>
+                                </li>
+                                <br>
+                                <li>
+                                    <a href="{% url 'ngo_rate' pk=ngo.pk %}" data-toggle="modal" data-target="#myModal" type="submit" class="btn btn-warning">Give Ratings</a>
+                                </li>
+                                </ul>
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                </div></div></div>
                              </div>
-                         </div>
-                    </div>
-               </section>
-               <section class="post-body">
-                   <p>{{ happening.content }}</p>
-               </section>
-              <section class="post-footer">
-                   <hr>
-                   <div class="post-footer-option container">
-                        <ul class="list-unstyled">
-                            <li><a href="{% url 'like_happening' pk=happening.id %}"><i class="glyphicon glyphicon-thumbs-up"></i>
-                              {% if request.user in happening.likes.all %}Unlike{% else %}like{% endif %} &#40 {{ happening.likes.count }} &#41</a></li>
-                            <li><a href="{% url 'post_comment' pk=happening.pk %}"><i class="glyphicon glyphicon-comment"></i> Comment</a></li>
-                            <li><a href="#"><i class="glyphicon glyphicon-share-alt"></i> Share</a></li>
-                        </ul>
-                   </div>
-                  <div class="post-footer-comment-wrapper">
-                       <div class="comment-form">
+                        </div>
 
-                       </div>
+                        <div class="col-xs-12 col-sm-8">
+                           <ul class="list-group">
+                              <li class="list-group-item"><h3>{{ ngo.name }}</h3></li>
+                              <li class="list-group-item"><h3>Ratings: <small>{{ ngo.get_round_ratings }}</small></h3></li>
+                              <li class="list-group-item"><h3>Address:</h3> <small>{{ ngo.address }}</small></li>
+                              <li class="list-group-item"><i class="fa fa-phone"></i>{{ ngo.contact }}</li>
+                              <li class="list-group-item"><i class="fa fa-envelope"></i> {{ ngo.email }}</li>
+                               <li class="list-group-item">This Organization is Moderated by <a href="{% url 'profile_detail' pk=ngo.moderator.pk %}">@{{ ngo.moderator.username }}</a></li>
 
-                            <div class="comment">
-                            {% for comment in comments %}
-                            {% if comment.comment_on == happening %}
-                            <div class="media">
-                                  <div class="media-left">
-                                    <a href="#">
-                                      <img class="media-object photo-profile" src="{% if comment.author.profile.photo %}{{ comment.author.profile.photo_avatar.url }}{% else %}http://placehold.it/64x64{% endif %}" width="32" height="32" alt="...">
-                                    </a>
-                                  </div>
-                                  <div class="media-body">
-                                    <a href="#" class="anchor-username"><h4 class="media-heading">{{ comment.author.username }}</h4></a>
-                                    <a href="#" class="anchor-time">{{ comment.time_stamp|timesince }}</a>
-                                  </div>
-                                    <p>{{ comment.content }}</p>
-                            </div>
-                            {% endif %}
-                            {% endfor %}
-                      </div>
-
-
+                           </ul>
+                        </div>
+                     </div>
                   </div>
+               </div>
+               <div class="bs-callout bs-callout-danger">
+                  <h4>Summary</h4>
+                  <p>
+                    {{ ngo.bio }}
+                   </p>
+                </div>
+               <div class="bs-callout bs-callout-danger">
+                  <h4>Requirements</h4>
+                  <p>
+                     Software Engineering, Machine Learning, Image Processing,
+                     Computer Vision, Artificial Neural Networks, Data Science,
+                     Evolutionary Algorithms.
+                  </p>
+               </div>
 
-              </section>
-            </div>
-        </div>
-	</div>
+        <!-- resume -->
+
     </div>
-{% endfor %}
-    </div>
+</div>
+</div>
+
+{% endblock %}
+{% block script %}
+<script>
+function toggleArticles(articleID) {
+    $('#row .ngoprofile').hide(); // this hides all currently open articles (if any);
+    $('#row #' + articleID).show(); // show article
+}
+$('#row .ngoprofile').hide();
+</script>
 {% endblock %}
