--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -42,18 +42,18 @@
                 </div>
             </div>
             <div class="panel panel-default target">
-                <div class="panel-heading" contenteditable="false">My Blogs</div>
+                <div class="panel-heading" contenteditable="false">Ngo's I Follow</div>
                 <div class="panel-body">
                   <div class="row">
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img alt="300x200" src="{{current_user.profile.photo_avtar}}">
+						<img alt="300x200" src="{% static 'img/header.jpg' %}">
 						<div class="caption">
 							<h3>
-								Rover
+								Pukar
 							</h3>
 							<p>
-								Cocker Spaniel who loves treats.
+								Children non governmental organization.
 							</p>
 							<p>
 
@@ -63,13 +63,13 @@
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img alt="300x200" src="http://lorempixel.com/600/200/city">
+						<img alt="300x200" src="{% static 'img/ngo1.jpg' %}">
 						<div class="caption">
 							<h3>
-								Marmaduke
+								Cry Foundation
 							</h3>
 							<p>
-								Is just another friendly dog.
+								Ngo that helps children.
 							</p>
 							<p>
 
@@ -79,13 +79,13 @@
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img alt="300x200" src="http://lorempixel.com/600/200/sports">
+						<img alt="300x200" src="{% static 'img/ngo2.jpg' %}">
 						<div class="caption">
 							<h3>
-								Rocky
+								Vikas Jyoti
 							</h3>
 							<p>
-								Loves catnip and naps. Not fond of children.
+								A non-governmental trust.
 							</p>
 							<p>
 
