--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -28,7 +28,7 @@
                 <li class="list-group-item text-muted" contenteditable="false">Profile</li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Username</strong></span>{{current_user.username}}</li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Gender</strong></span>{{current_user.profile.gender}} </li>
-                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">DOB</strong></span>{{current_user.profile.birth_date}}</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">DOB</strong></span>{{current_user.profile.birth_date}}</li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Email</strong></span>{{current_user.email}}</li>
             </ul>
 
@@ -47,7 +47,7 @@
                   <div class="row">
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img alt="300x200" src="{% static 'img/header.jpg' %}">
+						<img alt="300x200" src="{% static 'img/11.jpg' %}">
 						<div class="caption">
 							<h3>
 								Pukar
