--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,10 +1,15 @@
 {% extends 'accounts/base.html' %}
 {% load crispy_forms_tags %}
 {% block body %}
+<br>
+<br>
+<br>
     <div class="container">
     <div class="row">
         <div class="col-md-4">
-<h2>Sign up</h2>
+            </div>
+        <div class="col-md-4">
+<h2>User Registration Form</h2>
             <hr/>
   <form method="post" class="form col-md-12 center-block">
     {% csrf_token %}
