--- a/ordinem/static/css/ngoliststyle.css
+++ b/ordinem/static/css/ngoliststyle.css
@@ -5,8 +5,8 @@ article{
     margin-top: 10px;
 }
 figure img{
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
 }
 .glyphicon-folder-open,
 .glyphicon-user,
@@ -15,3 +15,4 @@ figure img{
 .glyphicon-comment{
     padding: 5px;
 }
+
