--- a/ordinem/templates/ordinem/create.html
+++ b/ordinem/templates/ordinem/create.html
@@ -5,8 +5,13 @@
     <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 {% block body %}
+<br>
+<br>
+<br>
     <div class="container">
     <div class="row">
+        <div class="col-md-4">
+            </div>
         <div class="col-md-4">
 <h2>Ngo Sign Up</h2>
             <hr/>
