fixed few things in front end

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,13 +2,12 @@
 {% load static %}
 {% block stylesheet %}
     <link href="{% static 'css/login.css' %}" rel="stylesheet">
-    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
 {% endblock %}
 {% block ahome %}active{% endblock %}
 {% block body %}
 <!-- login model -->
 
-<div id="fullscreen_bg" class="fullscreen_bg"/>
+<div id="fullscreen_bg" class="fullscreen_bg">
 
 <div class="container">
     <br>
@@ -17,12 +16,12 @@
         <h1 class="form-signin-heading text-muted">Sign In</h1>
 		<div class="form-group" >
                 {% csrf_token %}
-                <p class="text-danger">{{ form.non_field_errors }}</p>
+                <p class="bg-danger">{{ form.non_field_errors }}</p>
             </div>
         <br>
         <div class="form-group">
               {{ form.username }}
-                {{ form.username.errors }}
+            {{ form.username.errors }}
             </div>
             <div class="form-group">
               {{ form.password }}
@@ -34,7 +33,7 @@
             </div>
 	</form>
 </div>
-
+</div>
 <br>
 <br>
 <br>
