--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -80,7 +80,7 @@
             </ul>
             <form class="navbar-form navbar-right" method="GET" action="{% url 'ngo_search' %}">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="q" placeholder="Search">
+                    <input type="text" class="form-control" name="q" placeholder="Search" value="{{ request.GET.q }}">
                 </div>
                 <button type="submit" class="btn btn-success">Search</button>
             </form>
